--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,56 +3,46 @@
   "name": "LuxeLane Store",
   "description": "Ecommerce System",
   "lang": "en-US",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#002e62",
+  "theme_color": "#FFD670",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "72.png",
-      "sizes": "72x72",
-      "type": "image/jpg"
+      "src": "cart16.png",
+      "sizes": "16x16",
+      "type": "image/png"
     },
     {
-      "src": "96.png",
-      "sizes": "96x96",
-      "type": "image/jpg"
+      "src": "cart24.png",
+      "sizes": "24x24",
+      "type": "image/png"
     },
     {
-      "src": "120.png",
-      "sizes": "120x120",
-      "type": "image/jpg"
+      "src": "cart32.png",
+      "sizes": "32x32",
+      "type": "image/png"
     },
     {
-      "src": "144.png",
-      "sizes": "144x144",
-      "type": "image/jpg"
+      "src": "cart64.png",
+      "sizes": "64x64",
+      "type": "image/png"
     },
     {
-      "src": "125.png",
-      "sizes": "125x125",
-      "type": "image/jpg"
+      "src": "cart128.png",
+      "sizes": "128x128",
+      "type": "image/png"
     },
     {
-      "src": "180.png",
-      "sizes": "180x180",
-      "type": "image/jpg"
+      "src": "cart256.png",
+      "sizes": "256x256",
+      "type": "image/png"
     },
     {
-      "src": "192.png",
-      "sizes": "192x192",
-      "type": "image/jpg"
-    },
-    {
-      "src": "304.png",
-      "sizes": "304x304",
-      "type": "image/jpg"
-    },
-    {
-      "src": "512.png",
+      "src": "cart512.png",
       "sizes": "512x512",
-      "type": "image/jpg"
+      "type": "image/png"
     }
   ]
 }
