--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
     "react-router-transition": "^2.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^3.5.0"
